# Statistical_Consulting_Case

./: Multilevel_Causal_Inference.ipynb  dashboard.py  new_model.ipynb  new_model_dashboard.html  pyproject.toml  report.aux  report.fdb_latexmk  report.fls  report.tex  report_v2.tex  report_v3.aux  report_v3.tex  report_v4_posey.tex
.claude/: settings.local.json
outputs/: posterior_meta.json
reporting/: report_v1.aux  report_v1.fdb_latexmk  report_v1.fls  report_v1.out  report_v2.tex
reporting/scripts/: build_artifacts.py
